<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.windo.appcalculator.MainActivity">

    <EditText
        android:id="@+id/etShowNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:paddingTop="10pt"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="40sp"
        tools:text="0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu7"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu8"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu9"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button10"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buClean"
                android:text="@string/_C"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu5"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu6"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buSum"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buOpEevent"
                android:text="@string/equal"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/bu1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/bu3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buNumberEvent"
                android:text="@string/_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buSub"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="buOpEevent"
                android:text="@string/minus"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bu0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="60pt"
            android:layout_height="30pt"
            android:layout_weight="2"
            android:onClick="buNumberEvent"
            android:text="@string/_0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buDot"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="1"
            android:onClick="buNumberEvent"
            android:text="@string/point"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="1"
            android:onClick="buEqualEvent"
            android:text="@string/Equal"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>
